--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -16,9 +16,10 @@
 <body>
   <div class="container">
     <header class="header clearfix">
-      <a href="#" class="logo">
-        <h1 class="title">mart</h1>
-      </a>
+      <h1 class="title">
+        <a href="#" class="logo">mart</a>
+      </h1>
+
       <nav class="menu">
         <ul class="main-menu">
           <li class="main-menu-item"><a href="#" class="link">home</a></li>
