--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -1,194 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400;900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <meta name="author" content="Ivan Fesenko" />
-    <title>Homework-05</title>
-  </head>
-  <body>
-    <div class="container">
-      <header class="header clearfix">
-        <a class="logo">
-          <h1 class="title">mart</h1>
-        </a>
-        <nav class="menu">
-          <ul class="main-menu">
-            <li class="main-menu-item"><a href="#" class="link">home</a></li>
-            <li class="main-menu-item">
-              <a href="#" class="link">about us</a>
-            </li>
-            <li class="main-menu-item"><a href="#" class="link">page</a></li>
-            <li class="main-menu-item"><a href="#" class="link">shop</a></li>
-            <li class="main-menu-item"><a href="#" class="link">blog</a></li>
-            <li class="main-menu-item">
-              <a href="#" class="link">contact us</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-    <main class="main-content">
-      <section class="slider-section">
-        <div class="slider">
-          <img
-            src="./img/slide4.jpg"
-            alt="friends"
-            class="slider-image"
-            width="1648"
-            height="600"
-          />
-          <div class="wrapper">
-            <div class="container">
-              <div class="slider-menu clearfix">
-                <button type="button" class="btn btn-left">
-                  <img src="./img/slice-l.png" alt="slice" />
-                </button>
-                <button type="button" class="btn btn-right">
-                  <img src="./img/slice-r.png" alt="slice" />
-                </button>
-                <div class="title-text">
-                  <h2 class="title">AFFORDABLE PARIS TOURS</h2>
-                  <p class="text">
-                    CITY TOURS / TOUR TICKETS / TOUR GUIDES
-                  </p>
-                </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;400;900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="./css/normalize.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <meta name="author" content="Ivan Fesenko" />
+  <title>Homework-05</title>
+</head>
+
+<body>
+  <div class="container">
+    <header class="header clearfix">
+      <h1 class="title">
+        <a href="#" class="logo">mart</a>
+      </h1>
+      <nav class="menu">
+        <ul class="main-menu">
+          <li class="main-menu-item"><a href="#" class="link">home</a></li>
+          <li class="main-menu-item">
+            <a href="#" class="link">about us</a>
+          </li>
+          <li class="main-menu-item"><a href="#" class="link">page</a></li>
+          <li class="main-menu-item"><a href="#" class="link">shop</a></li>
+          <li class="main-menu-item"><a href="#" class="link">blog</a></li>
+          <li class="main-menu-item">
+            <a href="#" class="link">contact us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+  <main class="main-content">
+    <section class="slider-section">
+      <div class="slider">
+        <img src="./img/slide4.jpg" alt="friends" class="slider-image" width="1648" height="600" />
+        <div class="wrapper">
+          <div class="container">
+            <div class="slider-menu clearfix">
+              <button type="button" class="btn btn-left">
+                <img src="./img/slice-l.png" alt="slice" />
+              </button>
+              <button type="button" class="btn btn-right">
+                <img src="./img/slice-r.png" alt="slice" />
+              </button>
+              <div class="title-text">
+                <h2 class="title">AFFORDABLE PARIS TOURS</h2>
+                <p class="text">
+                  CITY TOURS / TOUR TICKETS / TOUR GUIDES
+                </p>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <section class="collection">
-        <div class="container">
-          <h2 class="section-title">new collection</h2>
-          <ul class="collection-list clearfix">
-            <li class="collection-list-item">
-              <div class="collection-menu-wrapper">
-                <div class="collection-menu">
-                  <div class="menu-like">
-                    <button class="coll-btn like" type="button"></button>
-                    <button class="coll-btn arrows" type="button"></button>
-                    <button class="coll-btn clock" type="button"></button>
-                  </div>
-                  <div class="menu-buy">
-                    <button class="buy-btn" type="button">
-                      add to card
-                    </button>
-                  </div>
+      </div>
+    </section>
+    <section class="collection">
+      <div class="container">
+        <h2 class="section-title">new collection</h2>
+        <ul class="collection-list clearfix">
+          <li class="collection-list-item">
+            <div class="collection-menu-wrapper">
+              <div class="collection-menu">
+                <div class="menu-like">
+                  <button class="coll-btn like" type="button"></button>
+                  <button class="coll-btn arrows" type="button"></button>
+                  <button class="coll-btn clock" type="button"></button>
+                </div>
+                <div class="menu-buy">
+                  <button class="buy-btn" type="button">
+                    add to card
+                  </button>
                 </div>
               </div>
-              <img
-                src="./img/category-2.jpg"
-                alt="belt"
-                width="255"
-                height="282"
-              />
-              <div class="name-price clearfix">
-                <p class="price">$26</p>
+            </div>
+            <img src="./img/category-2.jpg" alt="belt" width="255" height="282" />
+            <div class="name-price clearfix">
+              <p class="price">$26</p>
 
-                <h3 class="title"><a href="#" class="name">blue tshrit</a></h3>
-              </div>
-            </li>
-            <li class="collection-list-item">
-              <div class="collection-menu-wrapper">
-                <div class="collection-menu">
-                  <div class="menu-like">
-                    <button class="coll-btn like" type="button"></button>
-                    <button class="coll-btn arrows" type="button"></button>
-                    <button class="coll-btn clock" type="button"></button>
-                  </div>
-                  <div class="menu-buy">
-                    <button class="buy-btn" type="button">
-                      add to card
-                    </button>
-                  </div>
+              <h3 class="title"><a href="#" class="name">blue tshrit</a></h3>
+            </div>
+          </li>
+          <li class="collection-list-item">
+            <div class="collection-menu-wrapper">
+              <div class="collection-menu">
+                <div class="menu-like">
+                  <button class="coll-btn like" type="button"></button>
+                  <button class="coll-btn arrows" type="button"></button>
+                  <button class="coll-btn clock" type="button"></button>
+                </div>
+                <div class="menu-buy">
+                  <button class="buy-btn" type="button">
+                    add to card
+                  </button>
                 </div>
               </div>
-              <img
-                src="./img/category-1.jpg"
-                alt="belt"
-                width="255"
-                height="282"
-              />
-              <div class="name-price clearfix">
-                <p class="price">$31</p>
+            </div>
+            <img src="./img/category-1.jpg" alt="belt" width="255" height="282" />
+            <div class="name-price clearfix">
+              <p class="price">$31</p>
 
-                <h3 class="title"><a href="#" class="name">woman shrit</a></h3>
-              </div>
-            </li>
-            <li class="collection-list-item">
-              <div class="collection-menu-wrapper">
-                <div class="collection-menu">
-                  <div class="menu-like">
-                    <button class="coll-btn like" type="button"></button>
-                    <button class="coll-btn arrows" type="button"></button>
-                    <button class="coll-btn clock" type="button"></button>
-                  </div>
-                  <div class="menu-buy">
-                    <button class="buy-btn" type="button">
-                      add to card
-                    </button>
-                  </div>
+              <h3 class="title"><a href="#" class="name">woman shrit</a></h3>
+            </div>
+          </li>
+          <li class="collection-list-item">
+            <div class="collection-menu-wrapper">
+              <div class="collection-menu">
+                <div class="menu-like">
+                  <button class="coll-btn like" type="button"></button>
+                  <button class="coll-btn arrows" type="button"></button>
+                  <button class="coll-btn clock" type="button"></button>
+                </div>
+                <div class="menu-buy">
+                  <button class="buy-btn" type="button">
+                    add to card
+                  </button>
                 </div>
               </div>
-              <img
-                src="./img/category-4.jpg"
-                alt="belt"
-                width="255"
-                height="282"
-              />
-              <div class="name-price clearfix">
-                <p class="price">$21</p>
-                <h3 class="title">
-                  <a href="#" class="name">yellow tshrit</a>
-                </h3>
-              </div>
-            </li>
-            <li class="collection-list-item">
-              <div class="collection-menu-wrapper">
-                <div class="collection-menu">
-                  <div class="menu-like">
-                    <button class="coll-btn like" type="button"></button>
-                    <button class="coll-btn arrows" type="button"></button>
-                    <button class="coll-btn clock" type="button"></button>
-                  </div>
-                  <div class="menu-buy">
-                    <button class="buy-btn" type="button">
-                      add to card
-                    </button>
-                  </div>
+            </div>
+            <img src="./img/category-4.jpg" alt="belt" width="255" height="282" />
+            <div class="name-price clearfix">
+              <p class="price">$21</p>
+              <h3 class="title">
+                <a href="#" class="name">yellow tshrit</a>
+              </h3>
+            </div>
+          </li>
+          <li class="collection-list-item">
+            <div class="collection-menu-wrapper">
+              <div class="collection-menu">
+                <div class="menu-like">
+                  <button class="coll-btn like" type="button"></button>
+                  <button class="coll-btn arrows" type="button"></button>
+                  <button class="coll-btn clock" type="button"></button>
+                </div>
+                <div class="menu-buy">
+                  <button class="buy-btn" type="button">
+                    add to card
+                  </button>
                 </div>
               </div>
-              <img
-                src="./img/category-3.jpg"
-                alt="belt"
-                width="255"
-                height="282"
-              />
-              <div class="name-price clearfix">
-                <p class="price">$56</p>
-                <h3 class="title">
-                  <a href="#" class="name">cool lingerie</a>
-                </h3>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <footer class="footer">
-        <div class="container">
-          <p class="footer-text">
-            All Rights Reserved &copy; Dokan | Designed
-            <a href="#" class="link">ThemenGraph</a>
-          </p>
-        </div>
-      </footer>
-    </main>
-  </body>
+            </div>
+            <img src="./img/category-3.jpg" alt="belt" width="255" height="282" />
+            <div class="name-price clearfix">
+              <p class="price">$56</p>
+              <h3 class="title">
+                <a href="#" class="name">cool lingerie</a>
+              </h3>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-text">
+          All Rights Reserved &copy; Dokan | Designed
+          <a href="#" class="link">ThemenGraph</a>
+        </p>
+      </div>
+    </footer>
+  </main>
+</body>
+
 </html>
