--- a/html-css/module-11/src/index.html
+++ b/html-css/module-11/src/index.html
@@ -3,12 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework-10</title>
+    <title>Homework-11</title>
     <meta name="author" content="Ivan Fesenko" />
-    <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- Сюда будет всталена ссылка на файл стилей -->
+    <!-- inject:css -->
+    <!-- endinject -->
+    <link
+      rel="shortcut icon"
+      href="./images/icons/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
+
   <body>
     <header class="header">
       <div class="container">
@@ -34,7 +42,7 @@
               <button class="menu-btn">
                 <span class="visually-hidden">basket</span>
                 <svg class="menu-btn__icon">
-                  <use href="./img/icons/icons.svg#h-basket"></use>
+                  <use href="./images/icons/icons.svg#h-basket"></use>
                 </svg>
               </button>
             </li>
@@ -42,7 +50,7 @@
               <button class="menu-btn">
                 <span class="visually-hidden">search</span>
                 <svg class="menu-btn__icon">
-                  <use href="./img/icons/icons.svg#h-search"></use>
+                  <use href="./images/icons/icons.svg#h-search"></use>
                 </svg>
               </button>
             </li>
@@ -63,7 +71,7 @@
           <ul class="services__list">
             <li class="services__list-item">
               <svg class="services__list-item-icon">
-                <use href="./img/icons/icons.svg#i-alarm"></use>
+                <use href="./images/icons/icons.svg#i-alarm"></use>
               </svg>
               <h3 class="services__list-item-name">Photography</h3>
               <p class="services__list-item-text">
@@ -73,7 +81,7 @@
             </li>
             <li class="services__list-item">
               <svg class="services__list-item-icon">
-                <use href="./img/icons/icons.svg#i-graph"></use>
+                <use href="./images/icons/icons.svg#i-graph"></use>
               </svg>
               <h3 class="services__list-item-name">Web Design</h3>
               <p class="services__list-item-text">
@@ -83,7 +91,7 @@
             </li>
             <li class="services__list-item">
               <svg class="services__list-item-icon">
-                <use href="./img/icons/icons.svg#i-comp"></use>
+                <use href="./images/icons/icons.svg#i-comp"></use>
               </svg>
               <h3 class="services__list-item-name">Creativity</h3>
               <p class="services__list-item-text">
@@ -93,7 +101,7 @@
             </li>
             <li class="services__list-item">
               <svg class="services__list-item-icon">
-                <use href="./img/icons/icons.svg#i-book"></use>
+                <use href="./images/icons/icons.svg#i-book"></use>
               </svg>
               <h3 class="services__list-item-name">seo</h3>
               <p class="services__list-item-text">
@@ -103,7 +111,7 @@
             </li>
             <li class="services__list-item">
               <svg class="services__list-item-icon">
-                <use href="./img/icons/icons.svg#i-home"></use>
+                <use href="./images/icons/icons.svg#i-home"></use>
               </svg>
               <h3 class="services__list-item-name">Css/Html</h3>
               <p class="services__list-item-text">
@@ -113,7 +121,7 @@
             </li>
             <li class="services__list-item">
               <svg class="services__list-item-icon">
-                <use href="./img/icons/icons.svg#i-image"></use>
+                <use href="./images/icons/icons.svg#i-image"></use>
               </svg>
               <h3 class="services__list-item-name">digital</h3>
               <p class="services__list-item-text">
@@ -137,10 +145,10 @@
               <div class="team__list-item-img-wrapper">
                 <img
                   srcset="
-                    ./img/layer16-min.jpg    380w,
-                    ./img/layer16@2x-min.jpg 760w
+                    ./images/layer16-min.jpg    380w,
+                    ./images/layer16@2x-min.jpg 760w
                   "
-                  src="./img/layer16-min.jpg"
+                  src="./images/layer16-min.jpg"
                   alt="matthew-dix"
                   class="member-photo"
                   sizes="380px"
@@ -152,7 +160,7 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">facebook</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-facebook"></use>
+                          <use href="./images/icons/icons.svg#s-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -160,7 +168,7 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">twitter</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-twitter"></use>
+                          <use href="./images/icons/icons.svg#s-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -168,7 +176,9 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">pinterest</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-pinterest"></use>
+                          <use
+                            href="./images/icons/icons.svg#s-pinterest"
+                          ></use>
                         </svg>
                       </a>
                     </li>
@@ -176,7 +186,9 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">instagram</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-instagram"></use>
+                          <use
+                            href="./images/icons/icons.svg#s-instagram"
+                          ></use>
                         </svg>
                       </a>
                     </li>
@@ -190,10 +202,10 @@
               <div class="team__list-item-img-wrapper">
                 <img
                   srcset="
-                    ./img/layer19-min.jpg    380w,
-                    ./img/layer19@2x-min.jpg 760w
+                    ./images/layer19-min.jpg    380w,
+                    ./images/layer19@2x-min.jpg 760w
                   "
-                  src="./img/layer19-min.jpg"
+                  src="./images/layer19-min.jpg"
                   alt="matthew-dix"
                   class="member-photo"
                   sizes="380px"
@@ -205,7 +217,7 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">facebook</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-facebook"></use>
+                          <use href="./images/icons/icons.svg#s-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -213,7 +225,7 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">twitter</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-twitter"></use>
+                          <use href="./images/icons/icons.svg#s-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -221,7 +233,9 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">pinterest</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-pinterest"></use>
+                          <use
+                            href="./images/icons/icons.svg#s-pinterest"
+                          ></use>
                         </svg>
                       </a>
                     </li>
@@ -229,7 +243,9 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">instagram</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-instagram"></use>
+                          <use
+                            href="./images/icons/icons.svg#s-instagram"
+                          ></use>
                         </svg>
                       </a>
                     </li>
@@ -243,10 +259,10 @@
               <div class="team__list-item-img-wrapper">
                 <img
                   srcset="
-                    ./img/layer18-min.jpg    380w,
-                    ./img/layer18@2x-min.jpg 760w
+                    ./images/layer18-min.jpg    380w,
+                    ./images/layer18@2x-min.jpg 760w
                   "
-                  src="./img/layer18-min.jpg"
+                  src="./images/layer18-min.jpg"
                   alt="matthew-dix"
                   class="member-photo"
                   sizes="380px"
@@ -258,7 +274,7 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">facebook</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-facebook"></use>
+                          <use href="./images/icons/icons.svg#s-facebook"></use>
                         </svg>
                       </a>
                     </li>
@@ -266,7 +282,7 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">twitter</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-twitter"></use>
+                          <use href="./images/icons/icons.svg#s-twitter"></use>
                         </svg>
                       </a>
                     </li>
@@ -274,7 +290,9 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">pinterest</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-pinterest"></use>
+                          <use
+                            href="./images/icons/icons.svg#s-pinterest"
+                          ></use>
                         </svg>
                       </a>
                     </li>
@@ -282,7 +300,9 @@
                       <a href="#" class="social-list__item-link"
                         ><span class="visually-hidden">instagram</span>
                         <svg class="social-list__item-link--icon">
-                          <use href="./img/icons/icons.svg#s-instagram"></use>
+                          <use
+                            href="./images/icons/icons.svg#s-instagram"
+                          ></use>
                         </svg>
                       </a>
                     </li>
@@ -318,5 +338,8 @@
         </div>
       </div>
     </footer>
+    <!-- Сюда будет всталена ссылка на файл скриптов -->
+    <!-- inject:js -->
+    <!-- endinject -->
   </body>
 </html>
